--- a/killer2.html
+++ b/killer2.html
@@ -11,9 +11,7 @@
         <nav class="navbar navbar-default">
           <div class="container-fluid">
             <div class="navbar-header">
-              <a class="navbar-brand" href="#">
-                <img alt="Brand" src="https://s3-eu-west-1.amazonaws.com/killerpicks/bomb-small-transparent.png">
-              </a>
+
             </div>
           </div>
         </nav>
@@ -27,13 +25,24 @@
   		</div>
       <!-- Killer logo -->
   		<div class="col-md-8">
-  			<img class="img-responsive center-block" id="killerLogo" alt="Killer logo" src="https://s3-eu-west-1.amazonaws.com/killerpicks/bomb-small-transparent.png" />
+        <div class="row">
+          <div id="mainKillerTitle">
+            <h1>Killer.</h1>
+            <h3>The free Premier League predictions game</h3>
+          </div>
+        </div>
+        <div class="row">
+            {{> Signupform}}
+        </div>
       <!-- Icons and signup -->
   			<div class="row">
 
-          <div class="col-sm-6 col-md-3">
+          <div class="col-xs-3">
             <div class="thumbnail">
-              <i class="fa fa-plus-circle fa-3x"></i>
+              <a href="#">
+                <img src="" alt="" />
+                <i class="fa fa-plus-circle fa-3x"></i>
+              </a>
                 <div class="caption">
                   <h3>Create</h3>
                   <p>Create your league for free</p>
@@ -41,9 +50,12 @@
             </div>
           </div>
 
-          <div class="col-sm-6 col-md-3">
+          <div class="col-xs-3">
             <div class="thumbnail">
-              <i class="fa fa-users fa-3x"></i>
+              <a href="#">
+                <img src="" alt="" />
+                <i class="fa fa-users fa-3x"></i>
+              </a>
                 <div class="caption">
                   <h3>Invite</h3>
                   <p>Invite your friends</p>
@@ -51,19 +63,25 @@
             </div>
           </div>
 
-          <div class="col-sm-6 col-md-3">
+          <div class="col-xs-3">
             <div class="thumbnail">
-              <i class="fa fa-pencil-square-o fa-3x"></i>
+              <a href="#">
+                <img src="" alt="" />
+                <i class="fa fa-pencil-square-o fa-3x"></i>
+              </a>
                 <div class="caption">
                   <h3>Predict</h3>
-                  <p>Make a weekly Premier League prediction</p>
+                  <p>Pick a team</p>
                 </div>
             </div>
           </div>
 
-          <div class="col-sm-6 col-md-3">
+          <div class="col-xs-3">
             <div class="thumbnail">
-              <i class="fa fa-trophy fa-3x"></i>
+              <a href="#">
+                <img src="" alt="" />
+                <i class="fa fa-trophy fa-3x"></i>
+              </a>
                 <div class="caption">
                   <h3>Win</h3>
                   <p>Beat your friends</p>
@@ -85,3 +103,34 @@
 
   </div>
 </body>
+
+<template name="Signupform">
+  <div id="emailForm">
+    <p>
+      Killer will be launching in the Winter - sign up now to be notified when it does
+    </p>
+    <p>
+      In the meantime, send any questions to <a href="mailto:chairman@killer.football?subject=feedback">chairman@killer.football</a>
+    </p>
+    {{#if signedup}}
+      {{> Thanks}}
+    {{else}}
+      <form id="form_id">
+        <div class="input-group">
+          <input type="email" id="emailInputBox" class="form-control" placeholder="Enter your email address">
+          <span class="input-group-btn">
+            <button class="btn btn-default" type="submit">Submit</button>
+          </span>
+        </div>
+      </form>
+    {{/if}}
+  </div>
+</template>
+
+<template name="Thanks">
+  <div>
+    <p>
+      Thanks for signing up, we'll be in touch soon!
+    </p>
+  </div>
+</template>
