removed body tags and hacked FB and twitter together in success modal

--- a/app/client/HomeLayout.html
+++ b/app/client/HomeLayout.html
@@ -1,5 +1,5 @@
 <template name="HomeLayout">
-  <body>
+  <!-- <body> -->
     <div>
       {{> Template.dynamic template=nav}}
     </div>
@@ -11,5 +11,5 @@
     <footer>
       {{> Template.dynamic template=footer}}
     </footer>
-  </body>
+  <!-- </body> -->
 </template>
