--- a/app/client/head.html
+++ b/app/client/head.html
@@ -9,4 +9,6 @@
   <meta property="og:image" content="https://s3-eu-west-1.amazonaws.com/killerpicks/killerZip.png"/>
   <meta property="fb:app_id" content="436461956559485"/>
 
+  <link rel="icon" sizes="16x16 32x32" href="/favicon.ico?v=2">
+
 </head>
