--- a/app/client/head.html
+++ b/app/client/head.html
@@ -1,13 +1,13 @@
-<head>
+<!-- <head>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Free premier league predictions game</title>
+  <title>Free premier league predictions game</title> -->
 
   <!-- facebook graph tags -->
-  <meta property="og:url" content="http://killer.football"/>
+  <!-- <meta property="og:url" content="http://killer.football"/>
   <meta property="og:title" content="Free premier league predictions game"/>
   <meta property="og:description" content="Pit your wits against your friends in a simple game of footie predictions. Sign up now for free."/>
   <meta property="og:site_name" content="killer DOT football"/>
@@ -16,4 +16,4 @@
 
   <link rel="icon" sizes="16x16 32x32" href="/favicon.ico">
 
-</head>
+</head> -->
